--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,42 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+ul {
+  list-style: none;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 1200px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: lavender;
+}
+
+.section_title {
+  font-weight: bold;
+  font-size: 2em;
+}
+
+.button_list {
+  display: flex;
+  gap: 20px;
+  padding: 0;
+  justify-content: center;
+}
+
+.stats {
+  font-size: large;
+  padding-block: 2px;
+}
+
+.stats_list {
+  padding: 0;
+}
+
+.button {
+  text-transform: capitalize;
+}
